grammar/ulGrammarParser.java
// $ANTLR 3.0.1 ulGrammar.g 2018-04-07 11:34:20

	import AST.*;
	import MyTypes.*;
	import Semantic.*;
	import IR.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ulGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTEGERCONSTANT", "PRINT", "PRINTLN", "IF", "ELSE", "RETURN", "WHILE", "ASSIGNMENT", "MULTIPLY", "PLUSORMINUS", "LESSTHAN", "EQUALS", "TRUE", "FALSE", "FLOATCONSTANT", "CHARCONSTANT", "STRINGCONSTANT", "ID", "DOUBLEQUOTE", "SINGLEQUOTE", "LETTER", "DIGIT", "WHITESPACE", "COMMENT", "'('", "')'", "','", "'['", "']'", "'int'", "'float'", "'char'", "'string'", "'boolean'", "'void'", "'{'", "'}'", "';'"
    };
    public static final int PRINT=5;
    public static final int LETTER=24;
    public static final int PRINTLN=6;
    public static final int SINGLEQUOTE=23;
    public static final int DOUBLEQUOTE=22;
    public static final int COMMENT=27;
    public static final int RETURN=9;
    public static final int CHARCONSTANT=19;
    public static final int WHITESPACE=26;
    public static final int ASSIGNMENT=11;
    public static final int STRINGCONSTANT=20;
    public static final int ELSE=8;
    public static final int ID=21;
    public static final int EOF=-1;
    public static final int IF=7;
    public static final int EQUALS=15;
    public static final int TRUE=16;
    public static final int PLUSORMINUS=13;
    public static final int FLOATCONSTANT=18;
    public static final int DIGIT=25;
    public static final int INTEGERCONSTANT=4;
    public static final int LESSTHAN=14;
    public static final int WHILE=10;
    public static final int MULTIPLY=12;
    public static final int FALSE=17;

        public ulGrammarParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[70+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ulGrammar.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
    throws RecognitionException
    {
    	reportError(e);
    	throw e;
    }



    // $ANTLR start program
    // ulGrammar.g:37:1: program returns [Program prog] : (f= function )+ EOF ;
    public final Program program() throws RecognitionException {
        Program prog = null;

        Function f = null;



        	prog = new Program();

        try {
            // ulGrammar.g:42:1: ( (f= function )+ EOF )
            // ulGrammar.g:42:3: (f= function )+ EOF
            {
            // ulGrammar.g:42:3: (f= function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=33 && LA1_0<=38)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ulGrammar.g:42:4: f= function
            	    {
            	    pushFollow(FOLLOW_function_in_program52);
            	    f=function();
            	    _fsp--;
            	    if (failed) return prog;
            	    if ( backtracking==0 ) {
            	      prog.addElement(f);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return prog;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program58); if (failed) return prog;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return prog;
    }
    // $ANTLR end program


    // $ANTLR start function
    // ulGrammar.g:45:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
    public final Function function() throws RecognitionException {
        Function f = null;

        FunctionDecl fd = null;

        FunctionBody fb = null;


        try {
            // ulGrammar.g:46:1: (fd= functionDecl fb= functionBody )
            // ulGrammar.g:46:3: fd= functionDecl fb= functionBody
            {
            pushFollow(FOLLOW_functionDecl_in_function73);
            fd=functionDecl();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_functionBody_in_function77);
            fb=functionBody();
            _fsp--;
            if (failed) return f;
            if ( backtracking==0 ) {
               f = new Function(fd,fb);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return f;
    }
    // $ANTLR end function


    // $ANTLR start functionDecl
    // ulGrammar.g:49:1: functionDecl returns [FunctionDecl fd] : ct= compoundType i= identifier '(' fp= formalParameters ')' ;
    public final FunctionDecl functionDecl() throws RecognitionException {
        FunctionDecl fd = null;

        MyType ct = null;

        Identifier i = null;

        FormalParameter fp = null;


        try {
            // ulGrammar.g:50:1: (ct= compoundType i= identifier '(' fp= formalParameters ')' )
            // ulGrammar.g:50:3: ct= compoundType i= identifier '(' fp= formalParameters ')'
            {
            pushFollow(FOLLOW_compoundType_in_functionDecl94);
            ct=compoundType();
            _fsp--;
            if (failed) return fd;
            pushFollow(FOLLOW_identifier_in_functionDecl98);
            i=identifier();
            _fsp--;
            if (failed) return fd;
            match(input,28,FOLLOW_28_in_functionDecl100); if (failed) return fd;
            pushFollow(FOLLOW_formalParameters_in_functionDecl104);
            fp=formalParameters();
            _fsp--;
            if (failed) return fd;
            match(input,29,FOLLOW_29_in_functionDecl106); if (failed) return fd;
            if ( backtracking==0 ) {
               fd = new FunctionDecl(ct, i, fp);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fd;
    }
    // $ANTLR end functionDecl


    // $ANTLR start formalParameters
    // ulGrammar.g:53:1: formalParameters returns [FormalParameter fp] : (ct= compoundType i= identifier (mf= moreFormals )* | );
    public final FormalParameter formalParameters() throws RecognitionException {
        FormalParameter fp = null;

        MyType ct = null;

        Identifier i = null;

        FunctionParameter mf = null;



        	fp = new FormalParameter();

        try {
            // ulGrammar.g:58:1: (ct= compoundType i= identifier (mf= moreFormals )* | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=33 && LA3_0<=38)) ) {
                alt3=1;
            }
            else if ( (LA3_0==29) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return fp;}
                NoViableAltException nvae =
                    new NoViableAltException("53:1: formalParameters returns [FormalParameter fp] : (ct= compoundType i= identifier (mf= moreFormals )* | );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // ulGrammar.g:58:3: ct= compoundType i= identifier (mf= moreFormals )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters128);
                    ct=compoundType();
                    _fsp--;
                    if (failed) return fp;
                    pushFollow(FOLLOW_identifier_in_formalParameters132);
                    i=identifier();
                    _fsp--;
                    if (failed) return fp;
                    if ( backtracking==0 ) {
                       FunctionParameter p = new FunctionParameter(ct,i); fp.AddMoreFormals(p); 
                    }
                    // ulGrammar.g:59:1: (mf= moreFormals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==30) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ulGrammar.g:59:2: mf= moreFormals
                    	    {
                    	    pushFollow(FOLLOW_moreFormals_in_formalParameters139);
                    	    mf=moreFormals();
                    	    _fsp--;
                    	    if (failed) return fp;
                    	    if ( backtracking==0 ) {
                    	      fp.AddMoreFormals(mf);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // ulGrammar.g:61:1: 
                    {
                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end formalParameters


    // $ANTLR start moreFormals
    // ulGrammar.g:63:1: moreFormals returns [FunctionParameter fp] : ',' ct= compoundType i= identifier ;
    public final FunctionParameter moreFormals() throws RecognitionException {
        FunctionParameter fp = null;

        MyType ct = null;

        Identifier i = null;


        try {
            // ulGrammar.g:64:1: ( ',' ct= compoundType i= identifier )
            // ulGrammar.g:64:3: ',' ct= compoundType i= identifier
            {
            match(input,30,FOLLOW_30_in_moreFormals160); if (failed) return fp;
            pushFollow(FOLLOW_compoundType_in_moreFormals164);
            ct=compoundType();
            _fsp--;
            if (failed) return fp;
            pushFollow(FOLLOW_identifier_in_moreFormals168);
            i=identifier();
            _fsp--;
            if (failed) return fp;
            if ( backtracking==0 ) {
              fp = new FunctionParameter(ct, i);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end moreFormals


    // $ANTLR start compoundType
    // ulGrammar.g:67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );
    public final MyType compoundType() throws RecognitionException {
        MyType type = null;

        Token s=null;
        MyType t = null;


        try {
            // ulGrammar.g:68:1: (t= type | t= type '[' s= INTEGERCONSTANT ']' )
            int alt4=2;
            switch ( input.LA(1) ) {
            case 33:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==31) ) {
                    alt4=2;
                }
                else if ( (LA4_1==ID) ) {
                    alt4=1;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case 34:
                {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==ID) ) {
                    alt4=1;
                }
                else if ( (LA4_2==31) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 2, input);

                    throw nvae;
                }
                }
                break;
            case 35:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==ID) ) {
                    alt4=1;
                }
                else if ( (LA4_3==31) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 3, input);

                    throw nvae;
                }
                }
                break;
            case 36:
                {
                int LA4_4 = input.LA(2);

                if ( (LA4_4==ID) ) {
                    alt4=1;
                }
                else if ( (LA4_4==31) ) {
                    alt4=2;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 4, input);

                    throw nvae;
                }
                }
                break;
            case 37:
                {
                int LA4_5 = input.LA(2);

                if ( (LA4_5==31) ) {
                    alt4=2;
                }
                else if ( (LA4_5==ID) ) {
                    alt4=1;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 5, input);

                    throw nvae;
                }
                }
                break;
            case 38:
                {
                int LA4_6 = input.LA(2);

                if ( (LA4_6==31) ) {
                    alt4=2;
                }
                else if ( (LA4_6==ID) ) {
                    alt4=1;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 6, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return type;}
                NoViableAltException nvae =
                    new NoViableAltException("67:1: compoundType returns [MyType type] : (t= type | t= type '[' s= INTEGERCONSTANT ']' );", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // ulGrammar.g:68:5: t= type
                    {
                    pushFollow(FOLLOW_type_in_compoundType188);
                    t=type();
                    _fsp--;
                    if (failed) return type;
                    if ( backtracking==0 ) {
                       type = t; 
                    }

                    }
                    break;
                case 2 :
                    // ulGrammar.g:69:4: t= type '[' s= INTEGERCONSTANT ']'
                    {
                    pushFollow(FOLLOW_type_in_compoundType197);
                    t=type();
                    _fsp--;
                    if (failed) return type;
                    match(input,31,FOLLOW_31_in_compoundType199); if (failed) return type;
                    s=(Token)input.LT(1);
                    match(input,INTEGERCONSTANT,FOLLOW_INTEGERCONSTANT_in_compoundType203); if (failed) return type;
                    match(input,32,FOLLOW_32_in_compoundType205); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = t; type.setArraySize(s.getText()); type.setIsArray();
                    }

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return type;
    }
    // $ANTLR end compoundType


    // $ANTLR start type
    // ulGrammar.g:72:1: type returns [MyType type] : (s= 'int' | s= 'float' | s= 'char' | s= 'string' | s= 'boolean' | s= 'void' );
    public final MyType type() throws RecognitionException {
        MyType type = null;

        Token s=null;

        try {
            // ulGrammar.g:73:1: (s= 'int' | s= 'float' | s= 'char' | s= 'string' | s= 'boolean' | s= 'void' )
            int alt5=6;
            switch ( input.LA(1) ) {
            case 33:
                {
                alt5=1;
                }
                break;
            case 34:
                {
                alt5=2;
                }
                break;
            case 35:
                {
                alt5=3;
                }
                break;
            case 36:
                {
                alt5=4;
                }
                break;
            case 37:
                {
                alt5=5;
                }
                break;
            case 38:
                {
                alt5=6;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return type;}
                NoViableAltException nvae =
                    new NoViableAltException("72:1: type returns [MyType type] : (s= 'int' | s= 'float' | s= 'char' | s= 'string' | s= 'boolean' | s= 'void' );", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // ulGrammar.g:73:5: s= 'int'
                    {
                    s=(Token)input.LT(1);
                    match(input,33,FOLLOW_33_in_type224); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new intType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;
                case 2 :
                    // ulGrammar.g:74:4: s= 'float'
                    {
                    s=(Token)input.LT(1);
                    match(input,34,FOLLOW_34_in_type233); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new floatType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;
                case 3 :
                    // ulGrammar.g:75:4: s= 'char'
                    {
                    s=(Token)input.LT(1);
                    match(input,35,FOLLOW_35_in_type242); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new charType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;
                case 4 :
                    // ulGrammar.g:76:4: s= 'string'
                    {
                    s=(Token)input.LT(1);
                    match(input,36,FOLLOW_36_in_type251); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new stringType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;
                case 5 :
                    // ulGrammar.g:77:4: s= 'boolean'
                    {
                    s=(Token)input.LT(1);
                    match(input,37,FOLLOW_37_in_type260); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new booleanType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;
                case 6 :
                    // ulGrammar.g:78:4: s= 'void'
                    {
                    s=(Token)input.LT(1);
                    match(input,38,FOLLOW_38_in_type269); if (failed) return type;
                    if ( backtracking==0 ) {
                       type = new voidType(s.getText(), s.getLine(), s.getCharPositionInLine()); 
                    }

                    }
                    break;

            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return type;
    }
    // $ANTLR end type


    // $ANTLR start functionBody
    // ulGrammar.g:81:1: functionBody returns [FunctionBody fb] : '{' (vd= varDecl )* (s= statement )* '}' ;
    public final FunctionBody functionBody() throws RecognitionException {
        FunctionBody fb = null;

        VariableDeclaration vd = null;

        Statement s = null;



        	fb = new FunctionBody();

        try {
            // ulGrammar.g:85:1: ( '{' (vd= varDecl )* (s= statement )* '}' )
            // ulGrammar.g:86:2: '{' (vd= varDecl )* (s= statement )* '}'
            {
            match(input,39,FOLLOW_39_in_functionBody290); if (failed) return fb;
            // ulGrammar.g:86:6: (vd= varDecl )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=33 && LA6_0<=38)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ulGrammar.g:86:7: vd= varDecl
            	    {
            	    pushFollow(FOLLOW_varDecl_in_functionBody295);
            	    vd=varDecl();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	      fb.AddVarDecl(vd);
            	    }

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            // ulGrammar.g:86:41: (s= statement )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=INTEGERCONSTANT && LA7_0<=IF)||(LA7_0>=RETURN && LA7_0<=WHILE)||(LA7_0>=TRUE && LA7_0<=ID)||LA7_0==28||LA7_0==41) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // ulGrammar.g:86:42: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody304);
            	    s=statement();
            	    _fsp--;
            	    if (failed) return fb;
            	    if ( backtracking==0 ) {
            	      fb.AddStatement(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,40,FOLLOW_40_in_functionBody310); if (failed) return fb;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fb;
    }
    // $ANTLR end functionBody


    // $ANTLR start varDecl
    // ulGrammar.g:89:1: varDecl returns [VariableDeclaration vd] : ctype= compoundType id= identifier ';' ;
    public final VariableDeclaration varDecl() throws RecognitionException {
        VariableDeclaration vd = null;

        MyType ctype = null;

        Identifier id = null;


        try {
            // ulGrammar.g:90:1: (ctype= compoundType id= identifier ';' )
            // ulGrammar.g:90:3: ctype= compoundType id= identifier ';'
            {
            pushFollow(FOLLOW_compoundType_in_varDecl325);
            ctype=compoundType();
            _fsp--;
            if (failed) return vd;
            pushFollow(FOLLOW_identifier_in_varDecl329);
            id=identifier();
            _fsp--;
            if (failed) return vd;
            match(input,41,FOLLOW_41_in_varDecl331); if (failed) return vd;
            if ( backtracking==0 ) {
               vd = new VariableDeclaration(ctype, id); 
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return vd;
    }
    // $ANTLR end varDecl


    // $ANTLR start statement
    // ulGrammar.g:93:1: statement returns [Statement s] : (v= ifElseStatement | v= ifStatement | v= printStatement | v= printLnStatement | v= returnStatement | v= whileStatement | v= arrayAssignment | v= idAssignmentStatement | v= exprStatement | ';' );
    public final Statement statement() throws RecognitionException {
        Statement s = null;

        Statement v = null;


        try {
            // ulGrammar.g:94:1: (v= ifElseStatement | v= ifStatement | v= printStatement | v= printLnStatement | v= returnStatement | v= whileStatement | v= arrayAssignment | v= idAssignmentStatement | v= exprStatement | ';' )
            int alt8=10;
            switch ( input.LA(1) ) {
            case IF:
                {
                int LA8_1 = input.LA(2);

                if ( (synpred12()) ) {
                    alt8=1;
                }
                else if ( (synpred13()) ) {
                    alt8=2;
                }
                else {
                    if (backtracking>0) {failed=true; return s;}
                    NoViableAltException nvae =
                        new NoViableAltException("93:1: statement returns [Statement s] : (v= ifElseStatement | v= ifStatement | v= printStatement | v= printLnStatement | v= returnStatement | v= whileStatement | v= arrayAssignment | v= idAssignmentStatement | v= exprStatement | ';' );", 8, 1, input);

                    throw nvae;
                }
                }
                break;
            case PRINT:
                {
                alt8=3;
                }
                break;
            case PRINTLN:
                {
                alt8=4;
                }
                break;
            case RETURN:
                {
                alt8=5;
                }
                break;
            case WHILE:
                {
                alt8=6;
                }
                break;
            case ID:
                {
                int LA8_6 = input.LA(2);

                if ( (synpred18()) ) {
                    alt8=7;
                }
                else if ( (synpred19()) ) {
                    alt8=8;
                }
                else if ( (synpred20()) ) {
                    alt8=9;
                }
                else {
                    if (backtracking>0) {failed=true; return s;}
                    NoViableAltException nvae =
                        new NoViableAltException("93:1: statement returns [Statement s] : (v= ifElseStatement | v= ifStatement | v= printStatement | v= printLnStatement | v= returnStatement | v= whileStatement | v= arrayAssignment | v= idAssignmentStatement | v= exprStatement | ';' );", 8, 6, input);

                    throw nvae;
                }
                }
                break;
            case INTEGERCONSTANT:
            case TRUE:
            case FALSE:
            case FLOATCONSTANT:
            case CHARCONSTANT:
            case STRINGCONSTANT:
            case 28:
                {
                alt8=9;
                }
                break;
            case 41:
                {
                alt8=10;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return s;}
                NoViableAltException nvae =
                    new NoViableAltException("93:1: statement returns [Statement s] : (v= ifElseStatement | v= ifStatement | v= printStatement | v= printLnStatement | v= returnStatement | v= whileStatement | v= arrayAssignment | v= idAssignmentStatement | v= exprStatement | ';' );", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // ulGrammar.g:95:4: v= ifElseStatement
                    {
                    pushFollow(FOLLOW_ifElseStatement_in_statement352);
                    v=ifElseStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = v; 
                    }

                    }
                    break;
                case 2 :
                    // ulGrammar.g:96:4: v= ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement361);
                    v=ifStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = v; 
                    }

                    }
                    break;
                case 3 :
                    // ulGrammar.g:97:4: v= printStatement
                    {
                    pushFollow(FOLLOW_printStatement_in_statement370);
                    v=printStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = v; 
                    }

                    }
                    break;
                case 4 :
                    // ulGrammar.g:98:4: v= printLnStatement
                    {
                    pushFollow(FOLLOW_printLnStatement_in_statement379);
                    v=printLnStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = v; 
                    }

                    }
                    break;
                case 5 :
                    // ulGrammar.g:99:4: v= returnStatement
                    {
                    pushFollow(FOLLOW_returnStatement_in_statement388);
                    v=returnStatement();
                    _fsp--;
                    if (failed) return s;
                    if ( backtracking==0 ) {
                       s = v; 
                    }
